hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Type_de_materiel__c.field-meta.xml
<CustomField>
    <fullName>Type_de_materiel__c</fullName>
    <label>Type de materiel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Téléphonie</fullName>
            </value>
            <value>
                <fullName>Multimédia</fullName>
            </value>
            <value>
                <fullName>Accessoire</fullName>
            </value>
            <value>
                <fullName>Electroménager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>