hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Valeur_equipement__c.field-meta.xml
<CustomField>
    <fullName>Valeur_equipement__c</fullName>
    <formula>IF( Montant_equipement__c &lt;= 300,
    IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;oneStar&quot;),
    IF( Montant_equipement__c &gt; 300 &amp;&amp; Montant_equipement__c &lt;= 500,
        IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;twoStars&quot;),
        IF( Montant_equipement__c &gt; 500 &amp;&amp; Montant_equipement__c &lt;= 1000,
            IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;threeStars&quot;),
            IF( Montant_equipement__c &gt; 1000 &amp;&amp; Montant_equipement__c &lt;= 2000,
                IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;fourStars&quot;),
                IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;fiveStars&quot;)
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valeur équipement</label>
    <type>Text</type>
</CustomField>