hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Vitre_arriere_cassee__c.field-meta.xml
<CustomField>
    <fullName>Vitre_arriere_cassee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vitre arrière cassée</label>
    <type>Checkbox</type>
</CustomField>