hubSide/force-app/main/default/objects/Equipement_sinistre__c/recordTypes/Equipement_a_reparer.recordType-meta.xml
<RecordType>
    <fullName>Equipement_a_reparer</fullName>
    <active>true</active>
    <description>Equipement à réparer parce que cassé ou oxydé</description>
    <label>Equipement Réparation</label>
</RecordType>