hubSide/force-app/main/default/objects/Equipement_sinistre__c/recordTypes/Equipement_Echange_ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>Equipement_Echange_ReadOnly</fullName>
    <active>true</active>
    <description>Equipement non réparable car volé ou perdu - Read only</description>
    <label>Equipement Echange ReadOnly</label>
</RecordType>