hubSide/force-app/main/default/objects/Equipement_sinistre__c/recordTypes/Equipement_Reparation_ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>Equipement_Reparation_ReadOnly</fullName>
    <active>true</active>
    <description>Equipement à réparer parce que cassé ou oxydé - ReadOnly</description>
    <label>Equipement Réparation ReadOnly</label>
</RecordType>