hubSide/force-app/main/default/objects/Equipement_sinistre__c/recordTypes/Equipement_vole_perdu.recordType-meta.xml
<RecordType>
    <fullName>Equipement_vole_perdu</fullName>
    <active>true</active>
    <description>Equipement non réparable car volé ou perdu</description>
    <label>Equipement Echange</label>
</RecordType>