hubSide/force-app/main/default/objects/Equipement_sinistre__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Sinistre__c</columns>
    <columns>NAME</columns>
    <columns>Type_de_materiel__c</columns>
    <columns>Statut_equipement__c</columns>
    <columns>Montant_equipement__c</columns>
    <columns>Etat_produit__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>