hubSide/force-app/main/default/objects/Equipement_sinistre__c/listViews/EqpmToTransferToRepair.listView-meta.xml
<ListView>
    <fullName>EqpmToTransferToRepair</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Statut_equipement__c</columns>
    <columns>Sous_statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>En Attente Réparation</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Equipement_sinistre__c.Equipement_a_reparer</value>
    </filters>
    <label>Equipement à transférer à la réparation</label>
</ListView>