hubSide/force-app/main/default/objects/Equipement_sinistre__c/listViews/Equipe.listView-meta.xml
<ListView>
    <fullName>Equipe</fullName>
    <columns>NAME</columns>
    <columns>Type_de_materiel__c</columns>
    <columns>Montant_equipement__c</columns>
    <columns>Montant_franchise__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>En Cours de Réparation</value>
    </filters>
    <label>Equipe réparation</label>
</ListView>