hubSide/force-app/main/default/objects/Equipement_sinistre__c/listViews/Equipe_Stock.listView-meta.xml
<ListView>
    <fullName>Equipe_Stock</fullName>
    <columns>NAME</columns>
    <columns>Type_de_materiel__c</columns>
    <columns>Sinistre__c</columns>
    <columns>Numero_sinistre__c</columns>
    <columns>Statut_equipement__c</columns>
    <columns>Sous_statut__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>En Attente Réparation,Livraison PSM</value>
    </filters>
    <label>Equipe stock</label>
</ListView>