hubSide/force-app/main/default/objects/Equipement_sinistre__c/listViews/equipements_a_expedier.listView-meta.xml
<ListView>
    <fullName>equipements_a_expedier</fullName>
    <columns>NAME</columns>
    <columns>Type_de_materiel__c</columns>
    <columns>Statut_equipement__c</columns>
    <columns>Sous_statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>Repare_client_Expedition,Expédition client</value>
    </filters>
    <filters>
        <field>Sous_statut__c</field>
        <operation>equals</operation>
        <value>A sortir - Retour client,A sortir PSM,Réceptionné - A expédier</value>
    </filters>
    <label>Les équipements à expédier</label>
</ListView>