hubSide/force-app/main/default/objects/Equipement_sinistre__c/listViews/Equipements_Expedition.listView-meta.xml
<ListView>
    <fullName>Equipements_Expedition</fullName>
    <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Statut_equipement__c</columns>
    <columns>Sous_statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>Annulé - A retourner,Irréparable - A retourner,Repare_client_Expedition,Irréparable</value>
    </filters>
    <filters>
        <field>Sous_statut__c</field>
        <operation>equals</operation>
        <value>Sortie PSM</value>
    </filters>
    <filters>
        <field>Sous_statut__c</field>
        <operation>equals</operation>
        <value>A retourner PSM,Réceptionné - A expédier,Préparation</value>
    </filters>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>Expédition client</value>
    </filters>
    <label>Equipements Expédition</label>
</ListView>