hubSide/force-app/main/default/objects/Equipement_sinistre__c/listViews/Equipements_non_affectes.listView-meta.xml
<ListView>
    <fullName>Equipements_non_affectes</fullName>
    <booleanFilter>2 AND (1 OR (3 AND 4))</booleanFilter>
    <columns>NAME</columns>
    <columns>Statut_equipement__c</columns>
    <columns>Sous_statut__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>Livraison PSM</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Equipement_sinistre__c.Equipement_a_reparer</value>
    </filters>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>En Cours de Réparation</value>
    </filters>
    <filters>
        <field>Sous_statut__c</field>
        <operation>equals</operation>
        <value>A dispatcher</value>
    </filters>
    <label>Equipement réceptionnés / à dispatcher</label>
</ListView>