hubSide/force-app/main/default/objects/Equipement_sinistre__c/listViews/IssuReparation.listView-meta.xml
<ListView>
    <fullName>IssuReparation</fullName>
    <booleanFilter>1 AND (3 OR (2 AND (4 OR 5)))</booleanFilter>
    <columns>NAME</columns>
    <columns>SerieNumberEC__c</columns>
    <columns>Statut_equipement__c</columns>
    <columns>Sous_statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Equipement_a_reparer</value>
    </filters>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>Expédition client</value>
    </filters>
    <filters>
        <field>Sous_statut__c</field>
        <operation>equals</operation>
        <value>Sortie PSM</value>
    </filters>
    <filters>
        <field>Sous_statut__c</field>
        <operation>equals</operation>
        <value>Réceptionné - A expédier</value>
    </filters>
    <filters>
        <field>Sous_statut__c</field>
        <operation>equals</operation>
        <value>A retourner PSM</value>
    </filters>
    <label>Issu réparation</label>
</ListView>