hubSide/force-app/main/default/objects/Equipement_sinistre__c/listViews/Les_quipements_destockage_commande.listView-meta.xml
<ListView>
    <fullName>Les_quipements_destockage_commande</fullName>
    <columns>Sinistre__c</columns>
    <columns>NAME</columns>
    <columns>Type_de_materiel__c</columns>
    <columns>Statut_equipement__c</columns>
    <columns>Sous_statut__c</columns>
    <columns>SerieNumberEC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>En destockage</value>
    </filters>
    <label>Les équipements en déstockage</label>
</ListView>