hubSide/force-app/main/default/objects/Equipement_sinistre__c/listViews/Mes_equipements_reparation.listView-meta.xml
<ListView>
    <fullName>Mes_equipements_reparation</fullName>
    <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Numero_sinistre__c</columns>
    <columns>Statut_equipement__c</columns>
    <columns>Sous_statut__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Equipement_sinistre__c.Equipement_a_reparer</value>
    </filters>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>notEqual</operation>
        <value>Expédition client,Réparé Réception client,Irréparable,Annulé</value>
    </filters>
    <filters>
        <field>Statut_equipement__c</field>
        <operation>equals</operation>
        <value>Annulé - A retourner,Irréparable - A retourner</value>
    </filters>
    <filters>
        <field>Sous_statut__c</field>
        <operation>equals</operation>
        <value>A sortir - Retour SFAM</value>
    </filters>
    <label>Mes équipements en réparation</label>
</ListView>